# apfp

./: .clang-format  CMakeLists.txt  README.md
cmake/: FindGMP.cmake
device/: ArithmeticOperations.cpp  Karatsuba.cpp  MatrixMultiplication.cpp  Microbenchmark.cpp  MultiplyAccumulate.cpp
host/: BlasUnitTests.cpp  MatrixMultiplicationReference.cpp  Microbenchmark.cpp  MicrobenchmarkReference.cpp  Random.cpp  RunProgram.cpp  TestBlas.cpp  TestProgram.cpp  UnitTests.cpp
include/: ArithmeticOperations.h  Config.h.in  DeviceFloat.h  DeviceTypes.h  Karatsuba.h  Karatsuba_impl.h  MatrixMultiplication.h  MatrixMultiplicationReference.h  Microbenchmark.h  MicrobenchmarkReference.h  MultiplyAccumulate.h  PackedFloat.h  PipelinedAdd.h  Random.h  RunProgram.h
interface/: Apfp.cpp  Apfp.h  Apfp.hpp  ApfpBlas.cpp  ApfpBlas.h  ApfpInterfaceType.cpp  ApfpInterfaceType.h
scripts/: run_simulation.sh
